actualizar separado secciones

--- a/index.css
+++ b/index.css
@@ -266,6 +266,9 @@ footer{
         z-index: 1;
     }
     @media only screen and (max-width: 400px) {
+        .my-work{
+            margin-top: 140px;
+        }
         .works .work a{
             font-size: 60px;
         }
