--- a/index.css
+++ b/index.css
@@ -171,7 +171,7 @@ header .nav {
     letter-spacing: 4.04px;
 }
 .sound button{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0);
     border: none;
     align-items: center;
 }
@@ -275,6 +275,9 @@ footer{
     }
 }
 @media only screen and (max-width: 368px) {
+    footer{
+        left: 360px;
+    }
     .my-work{
         margin-top: 210px;
     }
