--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 :root {
     --color-principal: #1b1b1b;
     --color-secundario: #B7AB98;
-    --color-secundarioDark: #7E7868;
+    --color-secundarioDark: #6e6a5c;
     --color-terciario: #EB5939;
 }
 
@@ -9,16 +9,18 @@
     box-sizing: border-box;
     font-family: Avant Garde, sans-serif, serif;
     margin: 0;
-    cursor:default ;
+    cursor: default;
 }
 
 body {
     background-color: black;
 }
-header{
-   top: 0;
-   position: sticky;
+
+header {
+    top: 0;
+    position: sticky;
 }
+
 .header {
     width: 100%;
     display: flex;
@@ -26,8 +28,8 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0 5%;
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 80%);
-    
+    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 80%);
+
 }
 
 header .logo div {
@@ -101,7 +103,8 @@ header .nav {
     height: 80vh;
     margin: 0 auto;
 }
-.header-intro::after{
+
+.header-intro::after {
     content: "";
     display: block;
     position: absolute;
@@ -111,18 +114,20 @@ header .nav {
     height: 100%;
     background: url('img/pexels-sora-shimazaki-5926384.jpg') no-repeat center center fixed;
     background-size: cover;
-    opacity: 0.8; 
+    opacity: 0.8;
     z-index: -1;
     filter: contrast(110%)
 }
-.header-info{
+
+.header-info {
     width: 100%;
-    color:var(--color-secundario);
+    color: var(--color-secundario);
     margin: auto;
     text-align: center;
     justify-content: space-around;
 }
-.header-info .header-name{
+
+.header-info .header-name {
     text-align: center;
     font-size: 14px;
     font-style: normal;
@@ -130,14 +135,16 @@ header .nav {
     line-height: normal;
     letter-spacing: 3.075px;
 }
-.header-info .header-title{
+
+.header-info .header-title {
     display: flex;
     flex-flow: column;
     width: 60%;
     margin: auto;
     align-items: center;
 }
-.header-info .header-title .header-text{
+
+.header-info .header-title .header-text {
     display: flex;
     height: 80px;
     flex-direction: column;
@@ -149,46 +156,54 @@ header .nav {
     letter-spacing: -8.16px;
 
 }
-.color{
+
+.color {
     color: #EB5939;
 }
-.color2{
+
+.color2 {
     color: var(--color-secundario);
 }
 
-.sound{
+.sound {
     align-items: center;
     display: flex;
     z-index: 1;
     color: white;
     writing-mode: vertical-lr;
-    text-orientation:sideways-right ;
+    text-orientation: sideways-right;
     transform: rotate(180deg);
-    color:var(--color-secundarioDark);
+    color: var(--color-secundarioDark);
     font-size: 12px;
     font-weight: 700;
     line-height: normal;
     letter-spacing: 4.04px;
 }
-.sound button{
+
+.sound button {
     background-color: rgba(0, 0, 0, 0);
     border: none;
     align-items: center;
 }
-.sound button:hover,.sound a:hover{
-cursor: pointer;
+
+.sound button:hover,
+.sound a:hover {
+    cursor: pointer;
 }
-.sound div{
+
+.sound div {
     margin: 5% 0 0 0;
 }
-.section{
+
+.section {
     margin: 5% auto;
     width: 90%;
     height: 737px;
     display: flex;
     flex-flow: column;
 }
-.title{
+
+.title {
     height: 16px;
     justify-content: center;
     color: var(--color-secundarioDark);
@@ -198,7 +213,8 @@ cursor: pointer;
     letter-spacing: 8.64px;
     margin-bottom: 10%;
 }
-.about-me-text{
+
+.about-me-text {
     height: 515px;
     color: #B7AB98;
     font-size: 55px;
@@ -206,59 +222,118 @@ cursor: pointer;
     line-height: 115%;
     letter-spacing: -2px;
 }
-.my-work{
+
+.my-work {
     margin-top: 50px;
     height: 680px;
     width: 80%;
 }
-.works{
+
+.works {
     display: flex;
     flex-flow: column;
     justify-content: space-between;
     height: 452px;
     width: 100%;
+
 }
-.works .work a{
+
+.works .work a {
     width: 100%;
     text-decoration: none;
     color: var(--color-secundarioDark);
-    font-size: 77px;
+    font-size: 70px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     letter-spacing: -3.85px;
-    position:relative;
+    position: relative;
+    border-bottom: var(--color-secundarioDark) 1px solid;
 }
-.works .work a::before{
-    content:attr(data-after);
-    position:absolute;
-    color:var(--color-secundario);
-    top:0;
-    left:0;
-    width:0%;
-    overflow:hidden;
-    transition:all 0.8s;
-  }
-  .work a:hover{
+
+.works .work a::before {
+    content: attr(data-after);
+    position: absolute;
+    color: var(--color-secundario);
+    top: 0;
+    left: 0;
+    width: 0%;
+    overflow: hidden;
+    transition: all 0.8s;
+}
+
+.work a:hover {
     cursor: pointer;
-  }
-  .work a:hover:before{
-    width:150%;
-  }
-footer{
-    color: var(--color-secundarioDark); 
 }
+
+.work a:hover:before {
+    width: 150%;
+}
+.connect{
+    height: 300px;
+}
+.container-connect{
+    display: flex;
+    flex-flow: column;
+    width: 90%;
+
+}
+.container-connect .links{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+}
+.links .box{
+    width: 17px;
+    height: 17px;
+    background: var(--color-terciario);
+    margin-right: 23px;
+}
+.links .link a{
+    color: var(--color-secundario);
+    text-decoration: none;
+    font-size: 32px;
+    font-weight: bold;
+}
+.contact{
+    display: flex;
+    flex-flow: column;
+    margin-top: 30px;
+    padding-bottom: 50px;
+}
+.contact .contact-info{
+    display: flex;
+    flex-flow: column;
+    margin-bottom: 31px;
+}
+.info-text{
+    font-size: 32px;
+    color: white;
+    font-weight: bold;
+}
+.contact-link{
+    color: var(--color-secundarioDark);
+    font-weight: bold;
+    font-size: 28px;
+}
+footer {
+    color: var(--color-secundarioDark);
+}
+
 @media only screen and (max-width: 480px) {
-    .header-intro{
-        background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 20%);
+    .header-intro {
+        background: linear-gradient(0deg, rgba(2, 0, 36, 1) 0%, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 20%);
     }
-    .header-info{
+
+    .header-info {
         margin: 20% auto;
     }
-    .header-info .header-name{
+
+    .header-info .header-name {
         margin-bottom: 10%;
     }
-    footer{
+
+    footer {
         bottom: 40px;
         left: 450px;
         position: fixed;
@@ -266,25 +341,35 @@ footer{
         z-index: 1;
     }
 }
+
 @media only screen and (max-width: 400px) {
-    footer{
+    footer {
         left: 360px;
     }
-    .my-work{
+
+    .my-work {
         margin-top: 140px;
     }
-    .works .work a{
+
+    .works .work a {
         font-size: 50px;
     }
 }
+
 @media only screen and (max-width: 368px) {
-    footer{
+    .header-info .header-title .header-text {
+        height: 80px;
+    }
+
+    footer {
         left: 330px;
     }
-    .my-work{
+
+    .my-work {
         margin-top: 210px;
     }
-    .works .work a{
-        font-size: 60px;
+
+    .works .work a {
+        font-size: 55px;
     }
 }
